<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.elsoftware.notificationreminder.ui.activity.MainActivity"
    tools:showIn="@layout/activity_main"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <TextView
        android:id="@+id/txtEmpty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_notifications"
        android:gravity="center"
        android:paddingTop="10pt"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/activeContainer"
        >

        <TextView
            android:paddingLeft="5pt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/active_reminders"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingStart="5pt"
            android:paddingRight="5pt"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_done"
            android:paddingTop="7pt"
            android:id="@+id/btnClearActive"
            />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activeItems"
        android:layout_below="@+id/activeContainer"
        />

</RelativeLayout>
