<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:padding="2dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10pt"
            android:paddingStart="10pt"
            android:paddingRight="10pt"
            android:paddingTop="5pt"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtText"
                android:text="@string/example_text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingBottom="5pt"
                />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_date"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txtText"
                android:paddingBottom="5pt"
                android:layout_marginTop="2pt"
                />

            <ImageButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/btnRemove"
                android:background="@color/transparent"
                android:src="@drawable/ic_close_black_48dp"
                android:layout_below="@+id/txtText"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:scaleType="centerInside"
                android:contentDescription="@string/remove"
                />

            <ImageButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/btnRepeat"
                android:background="@color/transparent"
                android:src="@drawable/ic_history_black_48dp"
                android:layout_below="@+id/txtText"
                android:layout_alignParentRight="true"
                android:layout_marginRight="35dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="35dp"
                android:scaleType="centerInside"
                android:contentDescription="@string/repeat" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>